# Marketplace

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: abbef00934da_first_migration.py
app/: main.py
app/api/: dependencies.py
app/api/auth/: repository.py  router.py  schemas.py
app/api/orders/: repository.py  router.py  schemas.py
app/api/products/: repository.py  router.py  schemas.py
app/api/users/: repository.py  router.py  schemas.py
app/celery_tasks/: celery.py  tasks.py  worker.py
app/core/: config.py  exceptions.py  middleware.py  redus_client.py  security.py
app/db/: database.py  models.py
tests/: conftest.py  test_auth.py  test_orders.py  test_products.py  test_users.py
