[project]
name = "marketplace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.13.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.46",
]
